# quadtree_example

./: CMakeLists.txt  README.md  package.xml
data/: meshStat.py
data/comparison/: compression.odt  outCloudEfficientPPR_001_040.txt  outCloudEfficientPPR_001_200.txt  outCloudEfficientPPR_020_200.txt  outCloudEfficientPPR_020_201.txt  outCloudEfficient_001_040.txt  outCloudEfficient_020_200.txt  outCloudEfficient_020_201.txt
data/dataset_fusion/w16r17/: mesh.mtl  mesh.txt  screenshot1.cam  screenshot2.cam
data/dataset_fusion/w16r19/: mesh.mtl  mesh.txt  screenshot1.cam  screenshot2.cam
data/dataset_fusion/w5r16/: mesh.mtl  mesh.txt  screenshot1.cam  screenshot2.cam
data/dataset_fusion/w5r18/: mesh.mtl  mesh.txt  screenshot1.cam  screenshot2.cam
data/dataset_mesh/: patrol_run_16_WayPoint5_mesh.mtl
data/dataset_mesh/w12r17/: mesh.mtl  mesh.txt  screenshot1.cam  screenshot2.cam  segmented.txt
data/dataset_mesh/w16r17/: mesh.mtl  mesh.txt  screenshot1.cam  screenshot2.cam  segmented.txt
data/dataset_mesh/w16r17/hulls/: hull_0.pcd  hull_1.pcd  hull_10.pcd  hull_11.pcd  hull_12.pcd  hull_13.pcd  hull_14.pcd  hull_15.pcd  hull_16.pcd  hull_17.pcd  hull_18.pcd  hull_19.pcd  (+47 more)
data/holeCheck/: clouds_0.pcd  clouds_1.pcd  clouds_11.pcd  clouds_14.pcd  clouds_4.pcd  clouds_5.pcd  holes.pcd  holes_0.pcd  holes_1.pcd  holes_10.pcd  holes_11.pcd  holes_14.pcd  holes_4.pcd  holes_5.pcd
data/quadTreeTest/: plotQuad.py  polygon.txt  quad0.txt  quad1.txt  quad2.txt  triangles.txt
data/snapshot_mesh/frame1/: mesh.mtl  mesh.txt  screenshot-1459331018.cam  segmented.txt
data/snapshot_mesh/frame2/: .2b07318b270d633bc94ba74b39555f2e178d595d.cam  mesh.mtl  mesh.txt  segmented.txt
data/snapshot_mesh/frame3/: .54245ab6ad5269bbe9f9ecb8b537a3f242e7db.cam  mesh.mtl  mesh.txt  segmented.txt
data/snapshot_mesh/frame4/: mesh.mtl  mesh.txt  screenshot-1459331626.cam  segmented.txt
data/snapshot_mesh/frame5/: mesh.mtl  mesh.txt  screenshot-1459331873.cam  segmented.txt
data/test_cloud/: filename.cam  screenshot-1459333461.cam  testCloud_complete_001.txt  testCloud_complete_020.txt
data/test_cloud_mesh/: bound.pcd  boundary.pcd  mesh.mtl  mesh.txt
data/whelan/w16r17/: mesh.ply  textured_mesh.mtl  textured_mesh.txt  textured_mesh_comma.mtl  textured_mesh_comma.txt  transform.txt
data/whelan/w16r19/: mesh.ply  textured_mesh.mtl  textured_mesh.txt  textured_mesh_comma.mtl  textured_mesh_comma.txt  transform.txt
data/whelan/w5r16/: mesh.ply  pose.txt  textured_mesh.mtl  textured_mesh.txt  textured_mesh_comma.mtl  textured_mesh_comma.txt  transform.txt
data/whelan/w5r18/: convert.py  mesh.ply  textured_mesh.mtl  textured_mesh.txt  textured_mesh_comma.mtl  textured_mesh_comma.txt  transform.txt
include/parameters/: datasetParameters.yaml  fusionParameters.yaml  parameters.yaml  snapshotParameters.yaml
launch/: comparison.launch  datasetMesh.launch  fusionMesh.launch  snapshotMesh.launch  testCloudmesh.launch
src/: createTestCloud.cpp  datasetMesh.cpp  fusionMesh.cpp  holeCheck.cpp  insertSegmentTest.cpp  makeWhiteVersion.cpp  planeExtractionComparison.cpp  quadtreeexample.cpp  snapshotMesh.cpp  testCloudMesh.cpp
(+124 files in other folders)
